backend/src/main/java/com/example/syncmeet/error/ErrorResponse.java
package com.example.syncmeet.error;

import lombok.AllArgsConstructor;
import lombok.Data;

import java.util.List;

@Data
@AllArgsConstructor
public class ErrorResponse {
    private List<String> error;
}